implement api of getting topics to publish
